# Cargo.toml (最终胜利版 v2)

[package]
name = "my_overlay_handler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
winres = "0.1"

[dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_System_LibraryLoader", 
    "Win32_System_SystemServices",
]}

windows-core = "0.58.0"