[package]
name = "my_overlay_handler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# 用于将 icon 编译进 DLL
[build-dependencies]
winres = "0.1"

[dependencies]
windows = { version = "0.58.0", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_SystemServices",
  "Win32_System_LibraryLoader",
  "Win32_System_Registry",
  "Win32_System_Ole",
  "Win32_UI_Shell"
] }
windows-core = "0.58.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
